# popcorntime

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LEGAL.md  LICENSE  README.md  SECURITY.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
.cargo/: config.toml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yaml  copilot-instructions.md  dependabot.yaml  pr-labeler.yaml
.github/ISSUE_TEMPLATE/: 1_bug.yaml  1_feature.yaml
.github/workflows/: build.yml  lint-rust.yaml  lint-ts.yaml  pr-labeler.yaml  publish.include.txt  publish.yaml  test-ts.yaml
apps/desktop/: components.json  eslint.config.js  index.html  package.json  postcss.config.mjs  prettier.config.cjs  tsconfig.json  vite.config.ts  vitest.config.ts
crates/popcorntime-error/: Cargo.toml
crates/popcorntime-graphql-client/: Cargo.toml
crates/popcorntime-graphql-client/gql/: media.graphql  preferences.graphql  providers.graphql  schema.json  search.graphql
crates/popcorntime-graphql-client/macros/: Cargo.toml
crates/popcorntime-graphql-client/macros/src/: lib.rs
crates/popcorntime-graphql-client/src/: client.rs  consts.rs  lib.rs
crates/popcorntime-tauri-splash/: Cargo.toml
crates/popcorntime-tauri-splash/src/: lib.rs
crates/popcorntime-tauri-splash/src/platform_impl/: mod.rs
crates/popcorntime-tauri-splash/src/platform_impl/macos/: mod.rs
crates/popcorntime-tauri-splash/src/platform_impl/windows/: mod.rs
crates/popcorntime-tauri-trafficlights/: Cargo.toml
crates/popcorntime-tauri-trafficlights/src/: lib.rs  positioner.rs
scripts/: next.sh  normalize-spaces.sh  release.sh
(+136 files in other folders)
