[package]
name = "popcorntime-tauri-splash"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish = false

[dependencies]
tauri.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2.workspace = true
objc2-foundation.workspace = true
objc2-app-kit.workspace = true
